[FUEL-391] pacemaker service provider and misc
finished provider
fix cmd.env typo for exec_withenv
fix ENV variables by moving to exec_withenv
define restart function for pacemaker provider
change warning to notice in cs_shadow type
redirect crm_attribute stderr to null
remove stderr from corosync logs
fix node state parsing from CIB
check if cluster is ready in every flush

--- a/deployment/puppet/corosync/templates/corosync.conf.erb
+++ b/deployment/puppet/corosync/templates/corosync.conf.erb
@@ -20,9 +20,9 @@ mcastport:   <%= port %>
 
 logging {
 fileline:        off
-to_stderr:       yes
-to_logfile:      no
-
+to_stderr:       no 
+to_logfile:      yes
+logfile:	/var/log/corosync.log
 to_syslog:       yes
 syslog_facility: daemon
 debug:           <%= scope.lookupvar('debug') ? 'on' : 'off' %>
