--- a/deployment/puppet/ntp/templates/ntp.conf.el.erb
+++ b/deployment/puppet/ntp/templates/ntp.conf.el.erb
@@ -25,7 +25,7 @@ restrict -6 ::1
 
 # Managed by puppet class { "ntp": servers => [ ... ] }
 <% [servers_real].flatten.each do |server| -%>
-server <%= server %>
+server <%= server %> burst iburst
 <% end -%>
 
 #broadcast 192.168.1.255 key 42		# broadcast server
@@ -37,8 +37,8 @@ server <%= server %>
 
 # Undisciplined Local Clock. This is a fake driver intended for backup
 # and when no outside source of synchronized time is available. 
-server	127.127.1.0	# local clock
-fudge	127.127.1.0 stratum 10	
+# server	127.127.1.0	# local clock
+# fudge	127.127.1.0 stratum 10	
 
 # Drift file.  Put this in a directory which the daemon can write to.
 # No symbolic links allowed, either, since the daemon updates the file
