Switch of edd in centos

--- a/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
+++ b/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
@@ -48,7 +48,7 @@ skipx
 # --driveorder=sda,hda
 # APPEND STRING TO KERNEL BOOT COMMAND
 # --append=""
-bootloader --location=mbr --driveorder=sda,hda --append=" crashkernel=auto"
+bootloader --location=mbr --driveorder=sda,hda --append=" crashkernel=auto edd=off"
 
 # PARTITIONING
 # CLEAN ANY INVALID PARTITION TABLE
