Fix supervisor in ubuntu

--- a/deployment/puppet/cobbler/templates/snippets/ubuntu_mcollective_config.erb
+++ b/deployment/puppet/cobbler/templates/snippets/ubuntu_mcollective_config.erb
@@ -321,11 +321,8 @@ end
 in-target sed -i 's/msg_age = Time.now.utc.to_i - msgtime/msg_age = 0 #Time.now.utc.to_i - msgtime/g' /usr/lib/ruby/1.8/mcollective/message.rb; \
 #end if
 #if $str($getVar('mco_enable', '')) == "1"
-in-target /usr/sbin/invoke-rc.d mcollective stop \
+in-target /usr/sbin/invoke-rc.d mcollective stop; \
 in-target /usr/sbin/update-rc.d -f mcollective remove \
-in-target /usr/sbin/update-rc.d supervisor defaults \
-in-target /usr/sbin/invoke-rc.d supervisor start \
-in-target supervisorctl start mcollective  \
 #else
 true \
 #end if
