--- a/deployment/puppet/l23network/templates/ipconfig_RedHat_dhcp.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_RedHat_dhcp.erb
@@ -3,3 +3,6 @@ BOOTPROTO=dhcp
 ONBOOT=yes
 USERCTL=no
 <% if @dhcp_hostname %>DHCP_HOSTNAME=<%= @dhcp_hostname %><% end %>
+<% if @vlan_mode %>VLAN=yes<% end %>
+<% if @vlan_mode == 'vlan' %>VLAN_NAME_TYPE=VLAN_PLUS_VID_NO_PAD
+PHYSDEV=<%= @vlan_dev %><% end %>
