--- a/deployment/puppet/l23network/templates/ipconfig_RedHat_manual.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_RedHat_manual.erb
@@ -2,3 +2,6 @@ DEVICE=<%= interface %>
 BOOTPROTO=none
 ONBOOT=yes
 USERCTL=no
+<% if @vlan_mode %>VLAN=yes<% end %>
+<% if @vlan_mode == 'vlan' %>VLAN_NAME_TYPE=VLAN_PLUS_VID_NO_PAD
+PHYSDEV=<%= @vlan_dev %><% end %>
