--- a/deployment/puppet/l23network/templates/ipconfig_RedHat_static.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_RedHat_static.erb
@@ -4,6 +4,9 @@ NETMASK=<%= netmask %>
 BOOTPROTO=none
 ONBOOT=yes
 USERCTL=no
+<% if @vlan_mode %>VLAN=yes<% end %>
+<% if @vlan_mode == 'vlan' %>VLAN_NAME_TYPE=VLAN_PLUS_VID_NO_PAD
+PHYSDEV=<%= @vlan_dev %><% end %>
 <% if @def_gateway %>GATEWAY=<%= @def_gateway %><% end %>
 <% if @dns_nameservers_1 %>DNS1=<%= @dns_nameservers_1 %><% end %>
 <% if @dns_nameservers_2 %>DNS2=<%= @dns_nameservers_2 %><% end %>
