--- a/deployment/puppet/rsyslog/templates/client.conf.erb
+++ b/deployment/puppet/rsyslog/templates/client.conf.erb
@@ -14,7 +14,7 @@ $ActionResumeRetryCount -1      # infinety retries if host is down
 
 <% if scope.lookupvar('rsyslog::client::log_remote') -%>
 # Log to remote syslog server using <%= scope.lookupvar('rsyslog::client::remote_type') %>
-<% scope.lookupvar('rsyslog::client::rservers').each do |rserver| -%>
+<% scope.lookupvar('rsyslog::client::rservers_real').each do |rserver| -%>
 <% if rserver['remote_type'] == 'tcp' -%>
 *.* @@<%= rserver['server']-%>:<%= rserver['port'] -%>;RSYSLOG_ForwardFormat
 <% else -%>
