--- a/deployment/puppet/l23network/templates/ipconfig_Debian_dhcp.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_dhcp.erb
@@ -2,3 +2,9 @@ auto <%= interface %>
 iface <%= interface %> inet dhcp
 <% if @dhcp_hostname %>hostname <%= @dhcp_hostname %><% end %>
 <% if @vlan_mode %>vlan_raw_device <%= @vlan_dev %><% end %>
+<% if @mtu %>mtu <%= @mtu %><% end %>
+<% if @bond_mode %>bond-mode <%= @bond_mode %>
+slaves none<% if @bond_mode == 4 %>
+bond-miimon <%= @bond_miimon %>
+bond-lacp-rate <%= @bond_lacp_rate %><% end %>
+<% end %>
