--- a/deployment/puppet/l23network/templates/ipconfig_Debian_static.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_static.erb
@@ -7,3 +7,9 @@ netmask <%= netmask %>
 <% if @dns_nameservers_join %>dns-nameservers <%= @dns_nameservers_join %><% end %>
 <% if @dns_search %>dns-search <%= @dns_search %><% end %>
 <% if @dns_domain %>dns-domain <%= @dns_domain %><% end %>
+<% if @mtu %>mtu <%= @mtu %><% end %>
+<% if @bond_mode %>bond-mode <%= @bond_mode %>
+slaves none<% if @bond_mode == 4 %>
+bond-miimon <%= @bond_miimon %>
+bond-lacp-rate <%= @bond_lacp_rate %><% end %>
+<% end %>
