--- a/deployment/puppet/l23network/templates/ipconfig_RedHat_manual.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_RedHat_manual.erb
@@ -5,3 +5,5 @@ USERCTL=no
 <% if @vlan_mode %>VLAN=yes<% end %>
 <% if @vlan_mode == 'vlan' %>VLAN_NAME_TYPE=VLAN_PLUS_VID_NO_PAD
 PHYSDEV=<%= @vlan_dev %><% end %>
+<% if @mtu %>MTU=<%= @mtu %><% end %>
+<% if @bond_mode %>BONDING_OPTS="mode=<%= @bond_mode %><% if @bond_mode == 4 %> miimon=<%= @bond_miimon %> bond-lacp-rate=<%= @bond_lacp_rate %><% end %>"<% end %>
