--- a/deployment/puppet/l23network/templates/ipconfig_RedHat_static.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_RedHat_static.erb
@@ -10,3 +10,5 @@ PHYSDEV=<%= @vlan_dev %><% end %>
 <% if @def_gateway %>GATEWAY=<%= @def_gateway %><% end %>
 <% if @dns_nameservers_1 %>DNS1=<%= @dns_nameservers_1 %><% end %>
 <% if @dns_nameservers_2 %>DNS2=<%= @dns_nameservers_2 %><% end %>
+<% if @mtu %>MTU=<%= @mtu %><% end %>
+<% if @bond_mode %>BONDING_OPTS="mode=<%= @bond_mode %><% if @bond_mode == 4 %> miimon=<%= @bond_miimon %> bond-lacp-rate=<%= @bond_lacp_rate %><% end %>"<% end %>
