--- a/deployment/puppet/l23network/templates/ipconfig_Debian_manual.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_manual.erb
@@ -4,8 +4,8 @@ iface <%= interface %> inet manual
 up ip l set <%= interface %> up
 down ip l set <%= interface %> down
 <% if @mtu %>mtu <%= @mtu %><% end %>
-<% if @bond_mode %>bond-mode <%= @bond_mode %>
-slaves none<% if @bond_mode == 4 %>
-bond-miimon <%= @bond_miimon %>
+<% if @bond_mode %>slaves none
+bond-mode <%= @bond_mode %><% if @bond_miimon %>
+bond-miimon <%= @bond_miimon %><% end %><% if @bond_lacp_rate %>
 bond-lacp-rate <%= @bond_lacp_rate %><% end %>
 <% end %>
