--- a/deployment/puppet/l23network/templates/ipconfig_RedHat_static.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_RedHat_static.erb
@@ -10,5 +10,6 @@ PHYSDEV=<%= @vlan_dev %><% end %>
 <% if @def_gateway %>GATEWAY=<%= @def_gateway %><% end %>
 <% if @dns_nameservers_1 %>DNS1=<%= @dns_nameservers_1 %><% end %>
 <% if @dns_nameservers_2 %>DNS2=<%= @dns_nameservers_2 %><% end %>
+<% if @dns_search_string %>SEARCH=<%= @dns_search_string %><% end %>
 <% if @mtu %>MTU=<%= @mtu %><% end %>
 <% if @bond_mode %>BONDING_OPTS="mode=<%= @bond_mode %><% if @bond_miimon %> miimon=<%= @bond_miimon %><% end %><% if @bond_lacp_rate %> bond-lacp-rate=<%= @bond_lacp_rate %><% end %>"<% end %>
