fix for stateless connections and mcollective hang; conntrack module should be loaded first

--- a/deployment/puppet/cobbler/templates/preseed/ubuntu-1204.preseed.erb
+++ b/deployment/puppet/cobbler/templates/preseed/ubuntu-1204.preseed.erb
@@ -179,4 +179,5 @@ $SNIPPET('ubuntu_network') && \
 $SNIPPET('cinder_create_lvm_group__ubuntu') && \
 $SNIPPET('ubuntu_puppet_config') && \
 $SNIPPET('ubuntu_mcollective_config') && \
+echo -e "nf_conntrack_ipv4\nnf_conntrack_ipv6" >> /target/etc/modules
 true
