--- a/deployment/puppet/cobbler/templates/kickstart/rhel.ks.erb
+++ b/deployment/puppet/cobbler/templates/kickstart/rhel.ks.erb
@@ -100,6 +100,8 @@ wget
 crontabs
 cronie
 ruby-augeas
+yum-plugin-versionlock
+
 # COBBLER EMBEDDED SNIPPET: 'puppet_install_if_enabled'
 # LISTS puppet PACKAGE IF puppet_auto_setup VARIABLE IS SET TO 1
 $SNIPPET('puppet_install_if_enabled')
