--- a/deployment/puppet/rsyslog/templates/00-server.conf.erb
+++ b/deployment/puppet/rsyslog/templates/00-server.conf.erb
@@ -11,11 +11,11 @@ $ModLoad imtcp
 <% end -%>
 
 <% if scope.lookupvar('rsyslog::server::enable_udp') -%>
-$UDPServerRun 514
+$UDPServerRun <%= scope.lookupvar('rsyslog::server::port') %>
 <% end -%>
 
 <% if scope.lookupvar('rsyslog::server::enable_tcp') -%>
-$InputTCPServerRun 514
+$InputTCPServerRun <%= scope.lookupvar('rsyslog::server::port') %>
 <% end -%>
 
 <% unless scope.lookupvar('rsyslog::server::escapenewline') -%>
@@ -49,7 +49,9 @@ $SystemLogRateLimitInterval 0   # disable rate limits for rsyslog
 # Use traditional timestamp format.
 # To enable high precision timestamps, comment out the following line.
 #
+<% unless scope.lookupvar('rsyslog::server::high_precision_timestamps') -%>
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
+<% end -%>
 
 # Templates
 #$Template dynAuthLog,"<%= scope.lookupvar('rsyslog::server::server_dir') -%>%source:R,ERE,1,DFLT:([A-Za-z-]*)--end%/auth.log"
