--- a/deployment/puppet/rsyslog/templates/00-server.conf.erb
+++ b/deployment/puppet/rsyslog/templates/00-server.conf.erb
@@ -39,11 +39,11 @@ $ActionQueueDequeueBatchSize 128
 $ActionResumeRetryCount -1
 $SystemLogRateLimitInterval 0   # disable rate limits for rsyslog
 
-#
-# Use traditional timestamp format.
-# To enable high precision timestamps, comment out the following line.
-#
 <% unless scope.lookupvar('rsyslog::server::high_precision_timestamps') -%>
+#
+# Use traditional timestamp format date-rfc3164 (Dec 5 02:21:13).
+# To enable high precision timestamps date-rfc3339 (2010-12-05T02:21:41.889482+01:00), comment out the following line.
+#
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 <% end -%>
 
