--- a/deployment/puppet/rsyslog/templates/90-local.conf.erb
+++ b/deployment/puppet/rsyslog/templates/90-local.conf.erb
@@ -1,9 +1,14 @@
 # file is managed by puppet
 #
-<% if scope.lookupvar('rsyslog::client::log_auth_local') or scope.lookupvar('rsyslog::client::log_local') -%>
-# We log locally, restore to default format
+<% unless scope.lookupvar('rsyslog::client::high_precision_timestamps') -%>
+#
+# Use traditional timestamp format date-rfc3164 (Dec 5 02:21:13).
+# To enable high precision timestamps date-rfc3339 (2010-12-05T02:21:41.889482+01:00), comment out the following line.
+#
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
+<% end -%>
 
+<% if scope.lookupvar('rsyslog::client::log_auth_local') or scope.lookupvar('rsyslog::client::log_local') -%>
 # Log auth messages locally
 auth,authpriv.*                 /var/log/auth.log
 <% end -%>
