--- a/deployment/puppet/rsyslog/templates/99-remote.conf.erb
+++ b/deployment/puppet/rsyslog/templates/99-remote.conf.erb
@@ -3,16 +3,21 @@
 <% if scope.lookupvar('rsyslog::client::log_remote') -%>
 # Log to remote syslog server using <%= scope.lookupvar('rsyslog::client::remote_type') %>
 # Templates
-$Template CustomLog, "%$NOW%T%TIMESTAMP:8:$%Z %syslogseverity-text% %syslogtag% %msg:drop-last-lf%\n"
-
+<% if scope.lookupvar('rsyslog::client::high_precision_timestamps') -%>
+# Use high precision timestamps (date-rfc3339, 2010-12-05T02:21:41.889482+01:00)
+$Template RemoteLog, "%TIMESTAMP:32::date-rfc3339% %syslogseverity-text%: %msg:drop-last-lf%\n"
+<% else -%>
+# Use modified traditional timestamps (date-rfc3164, Dec 5 02:21:13 -> 2013-05-12T02:21:13)
+$Template RemoteLog, "%$NOW%T%TIMESTAMP:8:$%Z %syslogseverity-text% %syslogtag% %msg:drop-last-lf%\n"
+<% end -%>
 <% scope.lookupvar('rsyslog::client::rservers_real').each do |rserver| -%>
 <% if ! ['localhost','127.0.0.1','::1'].include?(rserver['server']) -%>
 <% if rserver['remote_type'] == 'tcp' -%>
 # Send messages we receive to master node via tcp
-*.* @@<%= rserver['server']-%>:<%= rserver['port'] -%>;CustomLog
+*.* @@<%= rserver['server']-%>:<%= rserver['port'] -%>;RemoteLog
 <% else -%>
 # Send messages we receive to master node via udp
-*.* @<%= rserver['server'] -%>:<%= rserver['port'] -%>;CustomLog
+*.* @<%= rserver['server'] -%>:<%= rserver['port'] -%>;RemoteLog
 <% end -%>
 <% end -%>
 <% end -%>
