--- a/deployment/puppet/openstack/templates/20-fuel.conf.erb
+++ b/deployment/puppet/openstack/templates/20-fuel.conf.erb
@@ -1,13 +1,14 @@
 "/var/log/*-all.log" "/var/log/remote/*/*log"
-"/var/log/kern.log" "/var/log/debug" "/var/log/daemon.log"
-"/var/log/auth.log" "/var/log/user.log" "var/log/mail.log"
-"/var/log/cron.log"
+"/var/log/kern.log" "/var/log/debug" "/var/log/syslog"
+# This file is used for hourly log rotations, use (min)size options here
 {
-# This file is used for daily log rotations, do not use (min)size options here
   sharedscripts
-  <%= @rotation %>
   # truncate file, do not delete & recreate
   copytruncate
+  # rotate only if 30M size or bigger
+  minsize 30M
+  # also rotate if 300M size have exceeded, should be size > minsize
+  size <%= @limitsize %>
   # keep logs for <%= @keep %> rotations
   rotate <%= @keep %>
   # compression is postponed to next rotation
@@ -21,3 +22,4 @@
       /bin/kill -HUP `cat /var/run/syslogd.pid 2> /dev/null` 2> /dev/null || true
   endscript
 }
+
