Add missed openstack facilities for logging class, del forcerestart
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/deployment/puppet/rsyslog/templates/20-keystone.conf.erb
+++ b/deployment/puppet/rsyslog/templates/20-keystone.conf.erb
@@ -7,4 +7,4 @@
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 <% end -%>
 
-<%= @syslog_log_facility %>.* -/var/log/keystone-all.log
+<%= @syslog_log_facility_keystone %>.* -/var/log/keystone-all.log
