--- a/deployment/puppet/rsyslog/templates/30-cinder.conf.erb
+++ b/deployment/puppet/rsyslog/templates/30-cinder.conf.erb
@@ -7,4 +7,4 @@
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 <% end -%>
 
-<%= @syslog_log_facility %>.* -/var/log/cinder-all.log
+<%= @syslog_log_facility_cinder %>.* -/var/log/cinder-all.log
