--- a/deployment/puppet/rsyslog/templates/50-quantum.conf.erb
+++ b/deployment/puppet/rsyslog/templates/50-quantum.conf.erb
@@ -7,4 +7,4 @@
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 <% end -%>
 
-<%= @syslog_log_facility %>.* -/var/log/quantum-all.log
+<%= @syslog_log_facility_quantum %>.* -/var/log/quantum-all.log
