--- a/deployment/puppet/rsyslog/templates/10-nova.conf.erb
+++ b/deployment/puppet/rsyslog/templates/10-nova.conf.erb
@@ -7,4 +7,4 @@
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 <% end -%>
 
-<%= @syslog_log_facility %>.* -/var/log/nova-all.log
+<%= @syslog_log_facility_nova %>.* -/var/log/nova-all.log
