--- a/deployment/puppet/rsyslog/templates/40-glance.conf.erb
+++ b/deployment/puppet/rsyslog/templates/40-glance.conf.erb
@@ -7,4 +7,4 @@
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 <% end -%>
 
-<%= @syslog_log_facility %>.* -/var/log/glance-all.log
+<%= @syslog_log_facility_glance %>.* -/var/log/glance-all.log
