--- a/deployment/puppet/horizon/templates/local_settings.py.erb
+++ b/deployment/puppet/horizon/templates/local_settings.py.erb
@@ -143,7 +143,7 @@ LOGGING = {
             # Logging from django.db.backends is VERY verbose, send to null
             # by default.
             'django.db.backends': {
-                'handlers':<% if django_verbose=='True' and use_syslog -%> ['syslog']<% else -%> ['null']<% end -%>,
+                'handlers':<% if django_debug=='False' and use_syslog -%> ['syslog']<% else -%> ['null']<% end -%>,
                 'level': '<%= log_level %>',
                 'propagate': False
                 },
