Fix templates (rsyslog conf) for loggers who ignore facility
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/deployment/puppet/rsyslog/templates/20-keystone.conf.erb
+++ b/deployment/puppet/rsyslog/templates/20-keystone.conf.erb
@@ -8,3 +8,4 @@ $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 <% end -%>
 
 <%= @syslog_log_facility_keystone %>.* -/var/log/keystone-all.log
+if $syslogtag contains "keystone" then -/var/log/keystone-all.log
