--- a/deployment/puppet/rsyslog/templates/10-nova.conf.erb
+++ b/deployment/puppet/rsyslog/templates/10-nova.conf.erb
@@ -8,3 +8,4 @@ $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 <% end -%>
 
 <%= @syslog_log_facility_nova %>.* -/var/log/nova-all.log
+if $syslogtag contains "nova" then -/var/log/nova-all.log
