--- a/deployment/puppet/rsyslog/templates/50-quantum.conf.erb
+++ b/deployment/puppet/rsyslog/templates/50-quantum.conf.erb
@@ -8,3 +8,4 @@ $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 <% end -%>
 
 <%= @syslog_log_facility_quantum %>.* -/var/log/quantum-all.log
+if $syslogtag contains "quantum" then -/var/log/quantum-all.log
