--- a/deployment/puppet/rsyslog/templates/00-remote.conf.erb
+++ b/deployment/puppet/rsyslog/templates/00-remote.conf.erb
@@ -1,23 +1,38 @@
 # file is managed by puppet
 #
 <% if scope.lookupvar('rsyslog::client::log_remote') -%>
-# Log to remote syslog server using <%= scope.lookupvar('rsyslog::client::remote_type') %>
 # Templates
 # RFC3164 emulation with long tags (32+)
 $Template RemoteLog, "<%%pri%>%timestamp% %hostname% %syslogtag%%msg:::sp-if-no-1st-sp%%msg%\n"
 # RFC5424 emulation would be: "<%%pri%>1 %timestamp:::date-rfc3339% %hostname% %syslogtag% %procid% %msgid% %structured-data% %msg%\n"
 # Note: don't use %app-name% cuz it would be empty for some cases
 $ActionFileDefaultTemplate RemoteLog
+# Templates for Logstash
+$Template LogToLogstash, "%rawmsg%\n"
+# Note: USER facility is reserved for RabbitMQ logs being captured via rsyslog::imfile
+# Do not use this facility for any other loggers, otherwise the Logstash would fail to parse it.
+$Template RabbitToLogstash, "<%%pri%>%syslogtag%%msg:::sp-if-no-1st-sp%%msg%\n"
 
 <% scope.lookupvar('rsyslog::client::rservers_real').each do |rserver| -%>
 <% if ! ['localhost','127.0.0.1','::1'].include?(rserver['server']) -%>
 <% if rserver['remote_type'] == 'tcp' -%>
-# Send messages we receive to master node via tcp
+# Send syslog messages via tcp
 *.* @@<%= rserver['server']-%>:<%= rserver['port'] -%>;RemoteLog
 <% else -%>
-# Send messages we receive to master node via udp
+# Send syslog messages via udp
 *.* @<%= rserver['server'] -%>:<%= rserver['port'] -%>;RemoteLog
 <% end -%>
+<% end -%>
+<% end -%>
+<% if ! ['localhost','127.0.0.1','::1'].include?(scope.lookupvar('rsyslog::client::logstash_node')) -%>
+# Send to Logstash as well (assume it use the same proto as 1st rsyslog server in the list)
+<% proto = scope.lookupvar('rsyslog::client::rservers_real')[0]['remote_type'] -%>
+<% if proto == 'tcp' -%>
+user.* @@<%= scope.lookupvar('rsyslog::client::logstash_node') %>:<%= scope.lookupvar('rsyslog::client::logstash_port') %>;RabbitToLogstash
+*.*;user.none @@<%= scope.lookupvar('rsyslog::client::logstash_node') %>:<%= scope.lookupvar('rsyslog::client::logstash_port') %>;LogToLogstash
+<% else -%>
+user.* @<%= scope.lookupvar('rsyslog::client::logstash_node') %>:<%= scope.lookupvar('rsyslog::client::logstash_port') %>;RabbitToLogstash
+*.*;user.none @<%= scope.lookupvar('rsyslog::client::logstash_node') %>:<%= scope.lookupvar('rsyslog::client::logstash_port') %>;LogToLogstash
 <% end -%>
 <% end -%>
 <% end -%>
