--- a/deployment/puppet/cobbler/templates/kickstart/rhel.ks.erb
+++ b/deployment/puppet/cobbler/templates/kickstart/rhel.ks.erb
@@ -99,6 +99,7 @@ cronie
 ruby-augeas
 rubygem-openstack
 rubygem-netaddr
+perl
 # COBBLER EMBEDDED SNIPPET: 'puppet_install_if_enabled'
 # LISTS puppet PACKAGE IF puppet_auto_setup VARIABLE IS SET TO 1
 $SNIPPET('puppet_install_if_enabled')
