--- a/deployment/puppet/openstack/templates/20-fuel.conf.erb
+++ b/deployment/puppet/openstack/templates/20-fuel.conf.erb
@@ -10,7 +10,7 @@
   copytruncate
   # rotate only if 30M size or bigger
   minsize 30M
-  # also rotate if 300M size have exceeded, should be size > minsize
+  # also rotate if <%= @limitsize %> size have exceeded, should be size > minsize
   size <%= @limitsize %>
   # keep logs for <%= @keep %> rotations
   rotate <%= @keep %>
