--- a/deployment/puppet/rpmcache/templates/build_rpm_cache.erb
+++ b/deployment/puppet/rpmcache/templates/build_rpm_cache.erb
@@ -14,8 +14,10 @@ function revert_back_to_centos() {
   done
   rm -f /etc/yum/vars/releasever
   yum-config-manager --enable 'nailgun' &> /dev/null
-  subscription-manager unregister
+  echo "Unsubscribing from RHSM..."
+  subscription-manager unregister || :`
 }
+
 trap revert_back_to_centos EXIT
 
 rhsm_plugins="product-id subscription-manager"
@@ -165,7 +167,7 @@ rm -f /etc/yum/vars/releasever
 yum-config-manager --enable 'nailgun' &> /dev/null
 
 #Disable all RHEL repos so you don't accidentally update and break master node
-yum-config-manager --disable '*rhel*' &> /dev/null
+yum-config-manager --disable '*rhel*' &> /dev/null || :
 
 #Purge Django 1.3 RPM
 rm -f <%= pkgdir %>/Packages/Django-1.3*
