Add missed corosync and syslog log to rotation plans
- Corosync does not provide log rotation after have been installed,
thus rotation should be provided by logging class as well.
- /var/log/syslog was initially added to size based rotaion plan (20-fuel.conf) only.
  Should be added to time based rotation plan (10-fuel.conf) as well.

--- a/deployment/puppet/openstack/templates/20-fuel.conf.erb
+++ b/deployment/puppet/openstack/templates/20-fuel.conf.erb
@@ -1,4 +1,4 @@
-"/var/log/*-all.log" "/var/log/remote/*/*log"
+"/var/log/*-all.log" "/var/log/corosync.log" "/var/log/remote/*/*log"
 "/var/log/kern.log" "/var/log/debug" "/var/log/syslog"
 "/var/log/dashboard.log" "/var/log/ha.log" "/var/log/quantum/*.log"
 "/var/log/nova/*.log" "/var/log/keystone/*.log" "/var/log/glance/*.log"
