--- a/deployment/puppet/nailgun/templates/settings.yaml.erb
+++ b/deployment/puppet/nailgun/templates/settings.yaml.erb
@@ -10,7 +10,7 @@ DATABASE:
   user: "<%= database_user %>"
   passwd: "<%= database_passwd %>"
 
-FUEL_KEY: "<%= $fuel_key %>"
+FUEL_KEY: "<%= fuel_key %>"
 
 STATIC_DIR: "<%= staticdir %>"
 TEMPLATE_DIR: "<%= templatedir %>"
