[PRD-1552] Fix rados-gw issues
move radosgw to another port to prevent conflict with horizon
fix radosgw module to use parent ceph params
change from using mgmt ip to public in cluster_
drop un-needed dep on nova::compute
chain radosgw after ceph::mon

--- a/deployment/puppet/ceph/templates/rgw.conf.ubuntu.erb
+++ b/deployment/puppet/ceph/templates/rgw.conf.ubuntu.erb
@@ -1,8 +1,8 @@
 FastCgiExternalServer /var/www/s3gw.fcgi -socket /tmp/radosgw.sock
 
-<VirtualHost *:80>
+<VirtualHost *:<%= @rgw_port %>>
   ServerName <%= @fqdn %>
-  DocumentRoot /var/www
+  DocumentRoot <%= @dir_httpd_root %>
 
   RewriteEngine On
   RewriteRule ^/([a-zA-Z0-9-_.]*)([/]?.*) /s3gw.fcgi?page=$1&params=$2&%{QUERY_STRING} [E=HTTP_AUTHORIZATION:%{HTTP:Authorization},L]
