--- a/deployment/puppet/ceph/templates/rgw.conf.redhat.erb
+++ b/deployment/puppet/ceph/templates/rgw.conf.redhat.erb
@@ -1,6 +1,6 @@
-<VirtualHost *:80>
+<VirtualHost *:<%= @rgw_port %>>
   ServerName <%= @fqdn %>
-  DocumentRoot /var/www
+  DocumentRoot <%= @dir_httpd_root %>
 
   RewriteEngine On
   RewriteRule ^/([a-zA-Z0-9-_.]*)([/]?.*) /s3gw.fcgi?page=$1&params=$2&%{QUERY_STRING} [E=HTTP_AUTHORIZATION:%{HTTP:Authorization},L]
@@ -9,7 +9,7 @@
     <Directory /var/www>
       Options +ExecCGI
       AllowOverride All
-      SetHandler fastcgi-script
+      SetHandler fcgid-script
       Order allow,deny
       Allow from all
       AuthBasicAuthoritative Off
