--- a/deployment/puppet/cobbler/templates/preseed/ubuntu-1204.preseed.erb
+++ b/deployment/puppet/cobbler/templates/preseed/ubuntu-1204.preseed.erb
@@ -126,5 +126,8 @@ echo -e "---\nurl: '<%= scope.lookupvar('nailgun::nailgun_api_url') %>'" > /targ
 echo target > /target/etc/nailgun_systemtype && \
 echo 'APT::Get::AllowUnauthenticated 1;' > /target/etc/apt/apt.conf.d/02mirantis-allow-unsigned && \
 echo 'deb http://@@server@@:8080/ubuntu/fuelweb/x86_64 precise main' > /target/etc/apt/sources.list && \
+#set $authorized_keys = str(open("/etc/cobbler/authorized_keys", "r").read()).rstrip('\n')
+mkdir -p /target/root/.ssh && \
+echo "$authorized_keys" > /target/root/.ssh/authorized_keys && \
 in-target apt-get -y install linux-image-3.5 && \
 true
