--- a/deployment/puppet/cobbler/templates/preseed/ubuntu-1204.preseed.erb
+++ b/deployment/puppet/cobbler/templates/preseed/ubuntu-1204.preseed.erb
@@ -129,6 +129,7 @@ echo 'deb http://@@server@@:8080/ubuntu/fuelweb/x86_64 precise main' > /target/e
 #set $authorized_keys = str(open("/etc/cobbler/authorized_keys", "r").read()).rstrip('\n')
 mkdir -p /target/root/.ssh && \
 echo "$authorized_keys" > /target/root/.ssh/authorized_keys && \
-sed -i -e "/^\s*GSSAPICleanupCredentials yes/d" -e "/^\s*GSSAPIAuthentication yes/d" -e "s/PasswordAuthentication.*/PasswordAuthentication\ no/g" -e "s/UseDNS.*/UseDNS\ no/g" /target/etc/ssh/sshd_config && \
+sed -i -e "/^\s*GSSAPICleanupCredentials yes/d" -e "/^\s*GSSAPIAuthentication yes/d" -e "s/.*PasswordAuthentication.*/PasswordAuthentication\ no/g" -e "/UseDNS/d" /target/etc/ssh/sshd_config && \
+echo "UseDNS no" >> /target/etc/ssh/sshd_config && \
 in-target apt-get -y install linux-image-3.5 && \
 true
